slurm-1404.out
Using TensorFlow backend.
Traceback (most recent call last):
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/TestandTrain1NetConfig1AI.py", line 35, in <module>
    import macros_AWS
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/macros_AWS.py", line 121
    Compile model
    ^
IndentationError: unexpected indent
('True negative total is ', 40837, 'out of', 100000)
('True positive total is ', 52471)
('False negative total is ', 3791)
('False positive total is ', 2901)
('Any missed ones? ', 0)
